src/snapshots/ec2hx__lang@trim_trailing_whitespace.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/trim_trailing_whitespace
snapshot_kind: text
---
# language-specific settings:

################################################################################

# global settings, applied equally to all remaining languages:

[[language]]
name = "adl"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "agda"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "amber"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "astro"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "beancount"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "blade"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "capnp"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "cel"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "comment"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "cpon"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "cylc"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "dbml"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "devicetree"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "diff"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "dtd"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ec2hx-global-fallback-plain-text"
scope = "text.plain"
file-types = [{ glob = "*.foo" }, { glob = "*.txt" }]
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "edoc"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "eex"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ejs"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "elisp"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "env"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "erb"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "esdl"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "fidl"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "gas"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "gemini"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "gherkin"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "git-attributes"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "git-commit"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "git-config"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "git-ignore"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "git-rebase"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "godot-resource"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "groovy"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "hare"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "haskell-persistent"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "hocon"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "hoon"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "hosts"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "iex"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ini"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "jinja"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "jjdescription"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "jsdoc"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "just"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "kdl"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ld"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ldif"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ledger"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "llvm"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "llvm-mir"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "llvm-mir-yaml"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "log"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "lpf"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "make"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "markdown.inline"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "matlab"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "mermaid"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "msbuild"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "nasm"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "nestedtext"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "nginx"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "nunjucks"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ohm"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "org"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "passwd"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "pem"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "php-only"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "pkl"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "po"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "pod"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ponylang"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "powershell"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "prql"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "regex"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ron"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "rst"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "sage"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "scheme"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "smali"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "sml"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "spicedb"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "sql"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "sshclientconfig"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "starlark"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "strace"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "supercollider"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "t32"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "tablegen"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "tact"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "task"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "tcl"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "thrift"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "twig"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "ungrammar"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "unison"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "uxntal"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "vento"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "vhs"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "wast"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "wat"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "webc"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "wit"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "wren"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "xit"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "xml"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "xtc"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true

[[language]]
name = "yuck"
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true
